hq sandbox - latest/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <description>Company Name</description>
        <inlineHelpText>Company Name</inlineHelpText>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_NumberOfSoldProperties__c</fullName>
        <label>Contact NumberOfSoldProperties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Primary_Practice__c</fullName>
        <label>Contact Primary Practice</label>
        <picklist>
            <picklistValues>
                <fullName>Architect/Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Sales Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor/Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord Rep (Flex)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord Rep (Full Service)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord Rep (Industrial)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord Rep (Land)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord Rep (Office)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord Rep (Retail)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research/Information Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant Rep (Flex)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant Rep (Full Service)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant Rep (Industrial)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant Rep (Office)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant Rep (Retail)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_TotalSoldPrice__c</fullName>
        <label>Contact TotalSoldPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deskcom__twitter_username__c</fullName>
        <label>Twitter Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Click_Through__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Click Through?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Letter_of_Last_Name__c</fullName>
        <formula>Left( LastName , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Letter of Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__HubSpot_Intelligence__c</fullName>
        <label>HubSpot Intelligence</label>
        <referenceTo>HubSpot_Inc__HubSpot_Intelligence__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <inlineHelpText>This is the master license which this contact is a user in.</inlineHelpText>
        <label>License</label>
        <referenceTo>sfLma__License__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Lookup__c</fullName>
        <formula>HYPERLINK(
&quot;http://www.linkedin.com/search/fpsearch?fname=&quot;&amp;FirstName&amp;&quot;&amp;lname=&quot;&amp;LastName&amp;&quot;&amp;currentTitle=CP&amp;company=&quot;&amp;Account.Name , IMAGE( &quot;https://na2.salesforce.com/servlet/servlet.ImageServer?id=01540000000W2CA&amp;oid=00D300000000sGl&amp;lastMod=1273527207000&quot;,&quot;Linked In&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LinkedIn Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <inlineHelpText>&quot;Numchuck (sic) skills... bowhunting skills... computer hacking skills... Girls only want boyfriends who have great skills!&quot; - Napolean Dynamite</inlineHelpText>
        <label>Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Dev - PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev - Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev - Visualforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev - Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev - Python</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev - Javascript</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Design - Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Design - User Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Design - Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Writing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Administration</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Webinar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webinar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sds__Allow_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sds__Duplicate_Key__c</fullName>
        <label>Duplicate Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sds__Master_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Master Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sds__Not_duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sds__sDuplicate_Key__c</fullName>
        <label>sDuplicate Key</label>
        <type>TextArea</type>
    </fields>
    <recordTypes>
        <fullName>CRE_Vendor</fullName>
        <active>true</active>
        <label>CRE Vendor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
</CustomObject>